# project2_kalenskiy_egor_M25-555

./: .gitignore  Makefile  README.md  asciinema_demo.py  create_asciinema.sh  create_demo.sh  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
