[tool.poetry]
name = "project#2_kalenskiy_egor_M25-555"
version = "0.4.0"
description = "Простая база данных для управления таблицами и метаданными с поддержкой CRUD-операций"
authors = ["e.kalenskiy <egor.kalenskiy@gmail.com>"]

packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
database = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.14"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.5,<0.15.0"
